# snowflake-mcp-openai

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/agents/: basic_agent.py  reasoning_agent.py
src/config/: mcp_config.json  tools_config.yaml
src/examples/: basic_queries.py
tests/: test_basic_agent.py
